test/k8sT/manifests/1.6/cnp-any-namespace.yaml
apiVersion: "cilium.io/v1"
kind: CiliumNetworkPolicy
description: "Policy to stress test L7 proxy"
metadata:
  name: "l7-stresstest"
  namespace: "development"
spec:
  endpointSelector:
    matchLabels:
      id: server
  ingress:
  - fromEndpoints:
    - matchLabels:
        id: client
      matchExpressions:
      - {key: 'k8s:io.kubernetes.pod.namespace', operator: Exists}
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/$"
