test/k8sT/manifests/1.6/demo_ds.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: testds
  namespace: default
spec:
  template:
    metadata:
      labels:
        zgroup: testDS
    spec:
      containers:
      - name: web
        image: cilium/demo-httpd
        ports:
        - containerPort: 80
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      - effect: NoSchedule
        key: node.cloudprovider.kubernetes.io/uninitialized
        value: "true"
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: testclient
  namespace: default
spec:
  template:
    metadata:
      labels:
        zgroup: testDSClient
    spec:
      containers:
      - name: web
        image: cilium/demo-client
        command: [ "sleep" ]
        args:
          - "1000h"
---
apiVersion: v1
kind: Service
metadata:
  name: testds-service
spec:
  ports:
  - port: 80
  selector:
    zgroup: testDS
---

apiVersion: v1
kind: Service
metadata:
  name: test-nodeport
spec:
  type: NodePort
  ports:
  - port: 10080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    zgroup: testDS
