test/k8sT/manifests/1.6/headless_policy.yaml
apiVersion: "cilium.io/v1"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-to-services"
spec:
  endpointSelector:
    matchLabels:
      "test": "toservices"
  egress:
  -
    toServices:
    - k8sService:
        serviceName: headless-service
        namespace: default
